--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,49 @@ a {text-decoration: none;}
         background-color: #118CE8;
         color: #ffffff;
         }
+    .backdrop {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.2);;
+    }
+
+    .backdrop.is-hidden {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    .modal {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 528px;
+        height: 581px;
+        background: #FFFFFF;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 4px;
+    }
+
+    .close-modal-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 5px;
+        right: 23px;
+        width: 30px;
+        height: 30px;
+        
+        background-color: var(--primary-bg-color);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 50%;
+    }
+    .close-modal-icon {
+        width: 18px;
+        height: 18px;}
 
     /*========= Main ==========*/
 
@@ -432,10 +475,6 @@ a {text-decoration: none;}
 
     }
 
-
-
-
-
     /* =========Portfolio=========== */
 
         /* filter */
@@ -502,45 +541,47 @@ a {text-decoration: none;}
         color: var(--primary-text-color);
     }
 
-    .work-link {display: block;}
-
-    .work-link:hover,
-    .work-link:focus {box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    .work-link {display: block;
     }
 
-    .text-description {
-        position: absolute;
-        height: 100%;
-        padding: 64px 24px;
-        font-weight: 400px;
-        font-size: 18px;
-        line-height: 1.56;
-        letter-spacing: 0.03em;
-        color: #FFFFFF;
-        opacity: 0;
-        }
+    .work-item:hover,
+    .work-item:focus {box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 
-    .work-description {
+    .description {
         position: relative;
-        width: 370px;
-        height: 294px;
     }
-    
-    .work-description::before {
+    .description::before {
         display: block;
         position: absolute;
         content: "";
         width: 100%;
         height: 100%;
-        background: rgba(33, 150, 243, 0.9);
+        background-color: rgba(33, 150, 243, 0.9);
         opacity: 0;
-        }
-
-    .work-description:hover::before {
-        opacity: 1;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1)
     }
 
-    .work-description:hover .text-description {
+    .text-description {
+        position: absolute;
+        top: 0;
+        left: 0%;
+        height: 100%;
+        padding: 63px 24px;
+        font-size: 18px;
+        line-height: 1.56;
+        letter-spacing: 0.03em;
+        color: #FFFFFF;
+        opacity: 0;
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1)
+    }
+
+    .work-item:hover .text-description,
+    .work-item:focus .text-description {
+        opacity: 1;
+    }
+    .work-item:hover .description::before,
+    .work-item:focus .description::before {
         opacity: 1;
     }
     
