--- a/css/styles.css
+++ b/css/styles.css
@@ -305,6 +305,38 @@ a {text-decoration: none;}
         display: flex;
         justify-content: space-between;
     }
+    .business-work {
+        position: relative;
+    }
+
+    .business-work::before {
+        display: block;
+        position: absolute;
+        content: "";
+        width: 100%;
+        bottom: 0;
+        left: 0;
+        height: 70px;
+        background: rgba(47, 48, 58, 0.8);
+    }
+
+    .business-text {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 70px;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--primary-bg-color);
+        
+    }
 
         /* Team  */
 
@@ -565,7 +597,7 @@ a {text-decoration: none;}
     .text-description {
         position: absolute;
         top: 0;
-        left: 0%;
+        left: 0;
         height: 100%;
         padding: 63px 24px;
         font-size: 18px;
