--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,18 @@ a {text-decoration: none;}
     .site-link:focus {color: var(--accent-color);}
     .site-link.current {color: var(--accent-color);}
 
+    .site-link::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        display: block;
+        width: 100%;
+        height: 4px;
+        background-color: var(--accent-color);
+        border-radius: 2px;
+    }
+
         /* auth nav */
 
     .auth-nav {
@@ -529,13 +541,14 @@ a {text-decoration: none;}
         color: var(--primary-title-color);
         border-radius: 4px;
         border: none;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .portfolio-button:hover,
     .portfolio-button:focus {
         color: var(--primary-bg-color);
         background-color: var(--accent-color);
-        
         box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     }
 
@@ -591,8 +604,8 @@ a {text-decoration: none;}
         height: 100%;
         background-color: rgba(33, 150, 243, 0.9);
         opacity: 0;
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1)
-    }
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
 
     .text-description {
         position: absolute;
@@ -605,15 +618,15 @@ a {text-decoration: none;}
         letter-spacing: 0.03em;
         color: #FFFFFF;
         opacity: 0;
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1)
-    }
+        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
 
     .work-item:hover .text-description,
     .work-item:focus .text-description {
         opacity: 1;
-    }
+        }
     .work-item:hover .description::before,
     .work-item:focus .description::before {
         opacity: 1;
-    }
+        }
     
