--- a/css/styles.css
+++ b/css/styles.css
@@ -82,7 +82,9 @@ a {text-decoration: none;}
         align-items: center;
         justify-content: space-between
     }
-    .main-nav {display: flex;}
+    .main-nav {
+        display: flex;
+    }
         
         /* site nav */
 
@@ -566,7 +568,7 @@ a {text-decoration: none;}
         width: 370px;
         margin-right: 30px;
         margin-bottom: 30px;
-        border: 1px solid #EEEEEE
+        border: 1px solid #EEEEEE;
     }
 
     .work-item:nth-child(3n) {margin-right: 0px;}
@@ -599,6 +601,7 @@ a {text-decoration: none;}
 
     .description {
         position: relative;
+        overflow: hidden;
     }
     .description::before {
         display: block;
@@ -607,8 +610,9 @@ a {text-decoration: none;}
         width: 100%;
         height: 100%;
         background-color: rgba(33, 150, 243, 0.9);
-        opacity: 0;
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        /* opacity: 0; */
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
     .text-description {
@@ -622,15 +626,18 @@ a {text-decoration: none;}
         letter-spacing: 0.03em;
         color: #FFFFFF;
         opacity: 0;
-        transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        transform: translateY(100%);
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
     .work-item:hover .text-description,
     .work-item:focus .text-description {
         opacity: 1;
+        transform: translateY(0);
         }
     .work-item:hover .description::before,
     .work-item:focus .description::before {
         opacity: 1;
+        transform: translateY(0);
         }
     
