--- a/css/styles.css
+++ b/css/styles.css
@@ -105,11 +105,12 @@ a {text-decoration: none;}
         font-weight: 500;
         line-height: 1.17;
         letter-spacing: 0.02em;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
         
     .site-link:hover,
     .site-link:focus {color: var(--accent-color);}
-    
+
     .site-link.current {color: var(--accent-color);
         position: relative;}
 
@@ -147,6 +148,7 @@ a {text-decoration: none;}
         letter-spacing: 0.02em;
         padding-top: 32px;
         padding-bottom: 32px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .auth-link:hover,
     .auth-link:focus {
@@ -207,6 +209,7 @@ a {text-decoration: none;}
 
         background-color: var(--accent-color);
         color: #ffffff;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
 
     .primery-button:hover,
@@ -398,6 +401,9 @@ a {text-decoration: none;}
         align-items: center;
         justify-content: center;
         color: #AFB1B8;
+        border-radius: 50%;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }    
     
     .icon-network {
@@ -412,8 +418,7 @@ a {text-decoration: none;}
     .link-network:focus {
         background-color: var(--accent-color);
         color: var(--primary-bg-color);
-        border-radius: 50%;
-    }
+        }
 
         /* Our clients */
 
@@ -432,6 +437,8 @@ a {text-decoration: none;}
         border: 1px solid #AFB1B8;
         border-radius: 4px;
         color: #AFB1B8;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .clients-link:hover,
@@ -473,7 +480,10 @@ a {text-decoration: none;}
     .footer-adress {color: #ffffff;}
 
     .footer-mail,
-    .footer-tel {color: rgba(255, 255, 255, 0.6);}
+    .footer-tel {
+        color: rgba(255, 255, 255, 0.6);
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
 
     .footer-mail:hover, .footer-mail:focus {color: #ffffff;}
 
@@ -514,6 +524,7 @@ a {text-decoration: none;}
         color: var(--primary-bg-color);
         background-color: rgba(255, 255, 255, 0.1);
         border-radius: 50%;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
     }
     .icon-footer-network {
         width: 20px;
