--- a/css/styles.css
+++ b/css/styles.css
@@ -345,21 +345,15 @@ a {text-decoration: none;}
     }
 
     .business-text {
-        display: inline-flex;
-        justify-content: center;
-        align-items: center;
         position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 70px;
+        bottom: 27px;
+        left: 83px;
         font-weight: 700;
         font-size: 14px;
         line-height: 1.14;
         letter-spacing: 0.03em;
         text-transform: uppercase;
         color: var(--primary-bg-color);
-        
     }
 
         /* Team  */
@@ -624,7 +618,7 @@ a {text-decoration: none;}
         width: 100%;
         height: 100%;
         background-color: rgba(33, 150, 243, 0.9);
-        /* opacity: 0; */
+        opacity: 0;
         transform: translateY(100%);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
         }
