--- a/css/styles.css
+++ b/css/styles.css
@@ -562,7 +562,8 @@ a {text-decoration: none;}
         border-radius: 4px;
         border: none;
         transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .portfolio-button:hover,
