--- a/css/styles.css
+++ b/css/styles.css
@@ -612,23 +612,15 @@ a {text-decoration: none;}
 
     .work-item:hover,
     .work-item:focus {box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
     }
 
     .description {
         position: relative;
-        overflow: hidden;
-    }
-    .description::before {
-        display: block;
-        position: absolute;
-        content: "";
         width: 100%;
         height: 100%;
         background-color: rgba(33, 150, 243, 0.9);
-        opacity: 0;
-        transform: translateY(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        overflow: hidden;
         }
 
     .text-description {
@@ -641,20 +633,14 @@ a {text-decoration: none;}
         line-height: 1.56;
         letter-spacing: 0.03em;
         color: #FFFFFF;
-        opacity: 0;
+        background-color: rgba(33, 150, 243, 0.9);
         transform: translateY(100%);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
         }
 
-    .work-item:hover .text-description,
-    .work-item:focus .text-description {
-        opacity: 1;
+    .work-link:hover .text-description,
+    .work-link:focus .text-description{
         transform: translateY(0);
         }
-    .work-item:hover .description::before,
-    .work-item:focus .description::before {
-        opacity: 1;
-        transform: translateY(0);
-        }
-    
+   
