--- a/css/styles.css
+++ b/css/styles.css
@@ -635,7 +635,7 @@ a {text-decoration: none;}
         color: #FFFFFF;
         background-color: rgba(33, 150, 243, 0.9);
         transform: translateY(100%);
-        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
         
         }
 
@@ -643,4 +643,3 @@ a {text-decoration: none;}
     .work-link:focus .text-description{
         transform: translateY(0);
         }
-   
